first fix for OK button overlapping
Now it looks good on both mobile devices and desktop. The button needs
some styling, now it just hangs by itself to the right.

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -2011,24 +2011,24 @@ table {
 
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
+/* @media only screen */
+/* and (min-device-width : 320px) */
+/* and (max-device-width : 480px) { */
 #cookiemsg {
   background-color: #fecc56;
   z-index: 1000;
   position: fixed;
   bottom: 0px;
   width: 100%;
-  height: 60px;
+  height: 40px;
   padding: 0 20px 0 0px;
   display: flex;
-  justify-content: center;
+  text-align: center;
 }
 
 #cookiemsg p {
-  margin: 0px;
-  margin-left: 5px;
+  /* margin: 0px; */
+  /* margin-left: 5px; */
   display: inline;
   align-self: center;
   color: #614875;
@@ -2039,7 +2039,7 @@ and (max-device-width : 480px) {
   align-self: center;
   margin-right: 5px;
 }
-}
+/* } */
 
 .nowrap {
   white-space: nowrap;
@@ -2252,6 +2252,7 @@ ul.hamburgerList button.menuButton {
     height: 26px;
     opacity: 1.0;
   }
+
 }
 
 @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
@@ -2280,6 +2281,17 @@ ul.hamburgerList button.menuButton {
     height: 26px;
     opacity: 1.0;
   }
+    #cookiemsg {
+  background-color: #fecc56;
+  z-index: 1000;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 60px;
+  padding: 0 20px 0 0px;
+  display: flex;
+  text-align: center;
+}
 }
 /* Title for the subpages of the section-editor */
 .titles{
